# qt5-template

./: CMakeLists.txt  OpenGLWindow.cpp  OpenGLWindow.h  TriangleWindow.cpp  TriangleWindow.h  main.cpp
